@@ -17,6 +17,10 @@ DEVELOPMENT HEAD
     * The --pattern option has been removed, now test specifiers on the
       command line can be simple strings, or regexps, or both.
 
+    * Passing -v to selftest will now show the time each test took to 
+      complete, which will aid in analysing performance regressions and
+      related questions.
+
 
 bzr 0.1 2005-10-06
 
